--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -22,7 +22,7 @@ The reader is introduced to the algebraic effects and handlers in an accessible 
 % w przypadku kilku promotorow, lub koniecznosci podania ich afiliacji, linie
 % w ponizszym poleceniu mozna zlamac poleceniem \fmlinebreak
 \advisor        {dr Filip Sieczkowski}
-\date          {4 września 2020}                     % Data zlozenia pracy
+\date          {\today} % 4 września 2020}                     % Data zlozenia pracy
 % Dane do oswiadczenia o autorskim wykonaniu
 \transcriptnum {301111}                     % Numer indeksu
 \advisorgen    {dr. Filipa Sieczkowskiego} % Nazwisko promotora w dopelniaczu
