--- a/thesis/3-build_systems_a_la_carte.tex
+++ b/thesis/3-build_systems_a_la_carte.tex
@@ -4,7 +4,7 @@
 \chapter{O systemach kompilacji (i ich klasyfikacji)}
 \label{chapter-bsalc}
 
-Systemy kompilacji, choć są wykorzystywane w praktycznie wszystkich projektach programistycznych, są przez ich użytkowników na ogół zaniedbywane, traktowane jak zło konieczne, a czasem nawet wywołują lęk oraz złość. Mimo tak dużej popularności i większym~--~niż mogłoby się wydawać~--~stopniu skomplikowania, nie cieszyły się specjalnym zainteresowaniem ze strony badaczy. Przyglądnęli się im jednak bliżej Andrey Mokhov, Neil Mitchell oraz Simon Peyton Jones w artykułach \BSaLC\cite{mokhov2018build} oraz \BSaLCTP\cite{mokhov2020build}. W tym rozdziale prześledzimy ich kroki i omówimy wyniki które otrzymali autorzy, aby w dalszej części pracy samodzielnie zaimplementować przedstawione systemy kompilacji w języku z efektami algebraicznymi oraz uchwytami.
+Systemy kompilacji, choć są wykorzystywane w praktycznie wszystkich projektach programistycznych, są przez ich użytkowników na ogół zaniedbywane, traktowane jak zło konieczne, a czasem nawet wywołują lęk oraz złość. Mimo tak dużej popularności i większego~--~niż mogłoby się wydawać~--~stopnia skomplikowania, nie cieszyły się specjalnym zainteresowaniem ze strony badaczy. Przyglądnęli się im jednak bliżej Andrey Mokhov, Neil Mitchell oraz Simon Peyton Jones w artykułach \BSaLC\cite{mokhov2018build} oraz \BSaLCTP\cite{mokhov2020build}. W tym rozdziale prześledzimy ich kroki i omówimy wyniki które otrzymali autorzy, aby w dalszej części pracy samodzielnie zaimplementować przedstawione systemy kompilacji w języku z efektami algebraicznymi oraz uchwytami.
 
 \section{Przykłady systemów kompilacji}
 
